# ClfbAR

./: README.md  pyproject.toml  setup.py
src/clfbar/: binners.py  clfbar.py
