[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clfbar"
version = "0.0.1"
authors = [
  { name="Dhruv Chopra", email="dhruvchops@gmail.com" }
]
description = "Classification By Association Rules Mining (CARS) Algorithm"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DChops/ClfbAR.git"